<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.telegram.TelegramAuthActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/ab_tg_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_tg_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/vk_color"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_sing_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_in"
            android:textColor="@color/nameColor"
            android:textSize="@dimen/text_xxxlarge"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_xlarge"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/et_first_name"
            android:hint="@string/first_name"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_below="@id/tv_sing_in"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_last_name"
            android:hint="@string/last_name"
            android:visibility="gone"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_below="@id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_phone_number"
            android:inputType="phone"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_below="@id/et_last_name"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_code"
            android:hint="@string/code"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:inputType="number"
            android:layout_below="@id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_sing_in"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/margin_small"
            android:textColor="@color/colorWhite"
            android:background="@color/vk_color"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>